# SCAM

./: Cargo.toml  README.md  TODO.md  Trunk.toml
.github/workflows/: cd.yml  ci.yml  rust.yml
scami/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
scami/src/: app.rs  config.rs  main.rs
scami/src/platform/: mod.rs  native.rs  wasm.rs
scami/web/: main.js  style.css
scamu/: Cargo.toml  README.md
scamu/src/hardware/apu/: mod.rs
scamu/src/hardware/cpu/: instructions.rs  mod.rs
scamu/src/hardware/cpu/addressing_modes/: factories.rs  implementations.rs  mod.rs
scamu/src/hardware/ppu/: mod.rs
