[package]
name = "scami-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
pixels = "0.17.1"
winit = "0.30.13"
log = "0.4.29"
scamu = { path = "../scamu", version="0.1" }
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = "0.22.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["Document", "Element", "HtmlCanvasElement", "Node", "Window"] }
rodio = { version = "0.22.2", features = ["wasm-bindgen"] }
wgpu = { version = "29.0.3", features = ["webgl"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[profile.dev]
overflow-checks = false
